RF13-14 ended, System Test Started